# varnish-encrypto

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  CMakeLists_linux.txt  CMakeLists_macos.txt  README.md  client.c
.github/workflows/: ci.yaml
src/: .thread.hpp.swp  client.cpp  client2.cpp  client_apple.cpp  connection.hpp  define.hpp  encrypto.cpp  encrypto.hpp  encrypto_epoll.cpp  functions.hpp  load_root_certificate.hpp  thread.cpp  thread.hpp
src-go/: chatscreen.go  go.mod  go.sum  hey.html  login.go  login.html  main.go  useredit.go
src-go/chatscreen/: chatscreen.html
src-go/chatscreen/css/: chat_style.css  dropdownlist.css  modalwindow.css
src-go/chatscreen/js/: chatlogic.js  display_onload.js  modalwindow.js
src-go/edit/: entry.html
src-go/edit/css/: entry-edit.css  memberslist_style.css
src-go/edit/js/: createimagefile.js  display_onload.js  entry-edit.js
